syntax = "proto3";

option csharp_namespace = "SolarService";


package greet;

service Greeter {
    rpc GetUsersAsync(EmptyRequest) returns (stream User);
    rpc GetRolesAsync(EmptyRequest) returns (stream Role);
    rpc GetTelegramAuthorisedUsersAsync(EmptyRequest) returns (stream TelegramAuthorisedUser);

    rpc GetStationsAsync(EmptyRequest) returns (stream SolarStation);

    rpc GetInvertorsOnStationAsync(InvertorsOnStationRequest) returns (stream Invertor);
    rpc GetAllInvertorsAsync(EmptyRequest) returns (stream Invertor);

    rpc GetEventsAsync(EmptyRequest) returns (stream Event);
    rpc GetEventTypesAsync(EmptyRequest) returns (stream EventType);
    rpc GetEventsByTypeAsync(EventsByTypeRequest) returns (stream Event);
    rpc GetErrorTypesAsync(EmptyRequest) returns (stream ErrorType);

    rpc GetEventsByErrorCode(ErrorCodeRequest) returns (stream Event);
    rpc GetEventsByErrorType(ErrorTypeRequest) returns (stream Event);
    rpc GetEventsByStation(StationRequest) returns (stream Event);
    rpc GetEventsByInvertor(InvertorRequest) returns (stream Event);

    rpc GetAllProducingStatisticsAsync(EmptyRequest) returns (stream ProducingStatistic);
    rpc GetProducingStatistics(ProducingStatisticOnStationRequest) returns (stream ProducingStatistic);

    rpc GetStationProducedEnergyAsync(InvertorsOnStationRequest) returns (StationProducedEnergy);
    rpc GetTotalProducedEnergyAsync(EmptyRequest) returns (StationProducedEnergy);
}

message EmptyRequest{

}

message StationRequest{
    int32 stationId = 1;
}

message InvertorRequest{
    int32 invertorId = 1;
}

message ProducingStatisticOffInvertorGroupRequest{
    int64 fromDate = 1;
    int64 toDate = 2;
    repeated int32 invertorId = 3;
}

message ProducingStatisticOnStationRequest{
    int64 fromDate = 1;
    int64 toDate = 2;
    int32 stationId = 3;
}

message InvertorsOnStationRequest{
    int32 stationId = 1;
}

message EventsByTypeRequest{
    int32 typeId = 1;
}

message ErrorCodeRequest{
    int64 code = 1;
}

message ErrorTypeRequest{
    int32 errorTypeId =1;
}

message EventType{
	int32 id = 1;
	string name = 2;
}

message ErrorType{
    int32 id = 1;
    string name = 2;
}

message Event {
	int32 id = 1;
    int64 date = 2;
	int32 eventTypeId = 3;
    int32 errorTypeId = 4;
    int32 invertorId = 5;
    int32 stationId = 6;
}

message SolarStation{
    int32 id = 1;
    string name = 2;
}

message Invertor{
	int32 id = 1;
	string name = 2;
    double power = 3;
    double current = 4;
    double voltage = 5;
    double producedEnergy = 6;
    double temperature = 7;
    string state = 8;
    int32 stationId = 9;
}

message Role{
    int32 id = 1;
    string name = 2;
    bool rootRights = 3;
    bool station1Pass = 4;
    bool station2Pass = 5;
    bool station3Pass = 6;
    bool station4Pass = 7;
    bool station5Pass = 8;
    bool station6Pass = 9;
}

message User{
    int32 id = 1;
    string login = 2;
    string password = 3;
    int32 roleId = 4;
}

message ProducingStatistic{
    int32 id = 1;
    double producedEnergy = 2;
    double predictedProducing = 3;
    int64 date = 4;
    int32 invertorId = 5;
    int32 stationId = 6;
}

message TelegramAuthorisedUser{
    int32 id = 1;
    int64 telegramUserId = 2;
}

message StationProducedEnergy{
    double energy = 1;
}